# ESCWorld

./: CMakeLists.txt  ComponentBase.cpp  ComponentBase.h  Entity.cpp  Entity.h  ExpressionBase.h  Expressions.h  README.md  System.h  World.cpp  World.h
Interfaces/: IComponent.h  IEvent.h  IExpression.h  ISystem.h
